--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,9 +3,11 @@ project:
   output-dir: docs
 
 website:
-  title: "Week 3 Lab"
+  title: "AAI1001 Lab"
   navbar:
     left:
+      - href: week_01_lab_note.qmd
+        text: Week 1
       - href: week_03_lab_note.qmd
         text: Week 3
 
