--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,8 @@ website:
         text: Week 2
       - href: week_03_lab_note.qmd
         text: Week 3
+      - href: week_04_lab_note.qmd
+        text: Week 4
 
 format:
   html:
